# cmd/api/api.go
@@ -119,15 +119,17 @@ func (app *Application) mount() http.Handler {
 				r.Patch("/", app.checkBookManipulationAuthority("moderator", app.updateBookHandler))
 				r.Delete("/", app.checkBookManipulationAuthority("moderator", app.deleteBookHandler))
 
-				// r.Route("/reviews", func(r chi.Router) {
-				// 	r.Get("/", app.getAllReviewsHandler)
-				// 	r.Post("/", app.createReviewHandler)
+				r.Route("/reviews", func(r chi.Router) {
+					r.Get("/", app.getAllReviewsHandler)
+					r.Post("/", app.createReviewHandler)
 
-				// 	r.Route("/{reviewID}", func(r chi.Router) {
-				// 		r.Patch("/", app.updateReviewHandler)
-				// 		r.Delete("/", app.deleteReviewHandler)
-				// 	})
-				// })
+					r.Route("/{reviewID}", func(r chi.Router) {
+						r.Use(app.reviewContextMiddleware)
+
+						r.Patch("/", app.updateReviewHandler)
+						r.Delete("/", app.deleteReviewHandler)
+					})
+				})
 			})
 
 			r.Get("/search", app.getBooksBySearchHandler)
@@ -144,7 +146,6 @@ func (app *Application) mount() http.Handler {
 				r.Get("/", app.getOrderHandler)
 
 				r.Patch("/", app.updateOderHandler)
-
 			})
 		})
 		r.Route("/admin", func(r chi.Router) {
