# docs/swagger.yaml
@@ -1,5 +1,18 @@
 basePath: /api/v1
 definitions:
+  main.CreateReviewPayload:
+    properties:
+      content:
+        minLength: 1
+        type: string
+      rating:
+        maximum: 5
+        minimum: 1
+        type: integer
+    required:
+    - content
+    - rating
+    type: object
   main.OrderItemPayload:
     properties:
       book_id:
@@ -213,6 +226,16 @@ definitions:
         minLength: 1
         type: string
     type: object
+  main.updateReviewPayload:
+    properties:
+      content:
+        minLength: 1
+        type: string
+      rating:
+        maximum: 5
+        minimum: 1
+        type: integer
+    type: object
   store.Book:
     properties:
       author:
@@ -278,6 +301,23 @@ definitions:
       price:
         type: number
       quantity:
+        type: integer
+    type: object
+  store.Review:
+    properties:
+      bookID:
+        type: integer
+      content:
+        type: string
+      createdAt:
+        type: string
+      id:
+        type: integer
+      rating:
+        type: integer
+      updatedAt:
+        type: string
+      userID:
         type: integer
     type: object
   store.Role:
@@ -446,6 +486,140 @@ paths:
       summary: Creates a book
       tags:
       - book
+  /books/{bookID}/reviews:
+    get:
+      consumes:
+      - application/json
+      description: Get all reviews by Book ID
+      parameters:
+      - description: Book ID
+        in: path
+        name: bookID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Get all Review
+          schema:
+            items:
+              $ref: '#/definitions/store.Review'
+            type: array
+        "400":
+          description: Invalid request
+          schema: {}
+        "500":
+          description: Server error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Get all Reviews
+      tags:
+      - review
+    post:
+      consumes:
+      - application/json
+      description: Create an Review
+      parameters:
+      - description: Book ID
+        in: path
+        name: bookID
+        required: true
+        type: integer
+      - description: Create Review Payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/main.CreateReviewPayload'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Creates an Review
+          schema:
+            $ref: '#/definitions/store.Review'
+        "400":
+          description: Invalid request
+          schema: {}
+        "500":
+          description: Server error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Create an Review
+      tags:
+      - review
+  /books/{bookID}/reviews/{reviewID}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a review for a book by ID
+      parameters:
+      - description: Book ID
+        in: path
+        name: bookID
+        required: true
+        type: integer
+      - description: Review ID
+        in: path
+        name: reviewID
+        required: true
+        type: integer
+      responses:
+        "204":
+          description: Review deleted successfully
+        "400":
+          description: Invalid request
+          schema: {}
+        "500":
+          description: Server error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Delete a Review
+      tags:
+      - review
+    patch:
+      consumes:
+      - application/json
+      description: Update a review
+      parameters:
+      - description: Review ID
+        in: path
+        name: reviewID
+        required: true
+        type: integer
+      - description: Book ID
+        in: path
+        name: bookID
+        required: true
+        type: integer
+      - description: Update Review Payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/main.updateReviewPayload'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Updated Review
+          schema:
+            $ref: '#/definitions/store.Review'
+        "400":
+          description: Invalid request
+          schema: {}
+        "500":
+          description: Server error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Update a review
+      tags:
+      - review
   /books/{id}:
     get:
       consumes:
